# moai

./: README.md
moai-app/: README.md  docker-compose.yml  drizzle.config.ts  jest.config.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml
moai-app/migrations/: 0000_steady_valeria_richards.sql
moai-app/migrations/meta/: 0000_snapshot.json  _journal.json
moai-app/src/app/: layout.tsx
moai-app/src/auth/: server.ts
moai-app/src/components/: icons.tsx  user-avatar.tsx
moai-app/src/db/: client.ts  mutations.ts  queries.ts  schema.ts  types.ts
moai-app/src/trpc/: context.ts  init.ts  server.ts
moai-solver/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
moai-solver/.github/workflows/: ci.yml
moai-solver/examples/: basic_example.py  production_planning.py  transportation_problem.py
moai-solver/src/moai/: app.py  builders.py  constraints.py  expressions.py  model.py  objectives.py  parameters.py  parse.py  results.py  sets.py  variables.py
moai-solver/tests/unit/: __init__.py  test_builders.py  test_constraints.py  test_expressions.py  test_model.py  test_objectives.py  test_parameters.py  test_parse.py  test_results.py  test_sets.py  test_variables.py
moai-web/: .gitignore  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
moai-web/migrations/: 0000_windy_slapstick.sql  0001_noisy_black_bolt.sql
moai-web/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
moai-web/src/app/: page.tsx
moai-web/src/components/: delete-dialog.tsx  icons.tsx
moai-web/src/db/: index.ts  mutations.ts  queries.ts  schema.ts  types.ts
moai-web/src/lib/: auth-client.ts  (+2 more)
(+188 files in other folders)
